...
            uri?.let { viewModel.onFileSelected(context, it) }
        }
    )

    Scaffold(
        topBar = {
            TopAppBar(title = { Text("Crear Carrera") })
        }
    ) { padding ->
        Column(
            modifier = Modifier
                .padding(padding)
                .padding(16.dp)
...
